--- a/k8s/environments/test/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kured-values.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:HjI=,iv:d8bBVlahlfPbbMyyEV7IQHHHk/Ov4GF6NAm0xYIP9bQ=,tag:znDy/MuO5kGLOTPbS9vRug==,type:str]
+apiVersion: ENC[AES256_GCM,data:nGc=,iv:fyIL5+TAsJjM4sPjcAbRkynyzcm6Fcg2Kgujg+I9w40=,tag:95z2IOH6CNtDITuTddG3Zg==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:YQXJ/vNCbPWI20VSvvphV3PFwL2wsKmEGgnDy/fFnnRH/yrLzMN4yEhvxsiIt0n6dZABn86mr1QF0dNLL7rq9L057fc9vbeAEFujQjkiN5lsFpSyqBYa1O2M9qhDe/TQj1zTChrnyXuhFlkO1OliTjD+zFOH+DiNV76brm7o+LB0A9qOwhK1Fy2Gu7WN39zZD2Fj1Q==,iv:3C4XO5F/JPy7wDovW27WnwDVSMT+su7UxBoF2GZl9OA=,tag:UO29T7dk+x0X8TrxcJzZ3A==,type:str]
-kind: ENC[AES256_GCM,data:5bFCnExz,iv:e1GU42brXMu/trMmtiE2lLhOAtY6i68llb8XtdtBkP8=,tag:tu66byzx8N7MKmRvUjFIDQ==,type:str]
+    values.yaml: ENC[AES256_GCM,data:T8mg/oAVgoce3smMod8Kf/WbikvWDRhi3DtONqLJkKKlDQFLP6gBuS+ShBNywDjyPXzrhUIMAdOCD5jH3lBJeny+XzEYW78KIwIM4bwbziXKqFc3nAf+9lPfOXv/zjhQZd/0UR4hyWUDf/GILHEIr/AbSLDAKehIDBRA+ooaNabSvNslfvtj/tswrwg=,iv:zOF4xvuQpmhJellQRV+nHuhm6j/qqkbX/elQ4dxpxFg=,tag:TuHS0xsfxUPtiond434oRQ==,type:str]
+kind: ENC[AES256_GCM,data:PCKWlvl4,iv:2cAdMwQVK/MHWIqcIjvgMuxZL2Bi2KnumEn37bKT2UE=,tag:oOUBC4n7c+xu6xAOKHgomg==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:iF0jjKbwf1JUu5oP,iv:C79VkvXEjryNGmjW3BULKWz/2sixmzxaYLLDQCL0LT4=,tag:6lfBPHNcBTpE6IsILD9VxQ==,type:str]
-    namespace: ENC[AES256_GCM,data:GFwJRfY=,iv:qwpzdcXPB62Oh7TXPG9XeH1ggPSWg+xNj/3oSjFvtAs=,tag:dJCj+t1rnPEZ9bNaAXfxhg==,type:str]
+    name: ENC[AES256_GCM,data:akPkRuwB4zhgTIrs,iv:31PTXQK39ZZQUxafXCBSCtHCuV5dB+zF5CBmNWqculg=,tag:d/itnko86cD4vHFHPaM3wA==,type:str]
+    namespace: ENC[AES256_GCM,data:EPKuZVQ=,iv:1LWzXRqVtpYOETThw7PJowUE9BLSJ1Y2JSmSoWL/sDE=,tag:kg68zO/aCZFfdBxS/yB2mg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,10 +13,10 @@ sops:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
         version: d1c5c1736ef44f86a71cfe140d3eef49
-        created_at: '2020-09-02T11:57:44Z'
-        enc: kfvAc0R20TOKPsYxvnuVfmAz_QDc2Rgq3fAHrmTtUxqzQ98ZJs_vjdHM9kpaOee8ViKAN2TQ0EnDURCREzQtzwTAK62RE2rY5MjzHnVaHXStJuWLfHo5WMx3DhphWX97fRnBIfF8xkrIaZdOtAP4KGOs_l5WFJyaJs4s3I0SEqmlOSy54f6PW9yS8U4Kk1P425FalDn957wD4q76FKTPnsE3LaI95uHcoefx-8sJwSnERxY9N1-zSl-g8mrAy3V3YMui2ktY_3m3zK013Se5X_pZp1STSwZYr6gm4UWmgCCALQDCUvpGsCPoqN64r0QT6hxYSUXFdzuJGkACNMTrDg
-    lastmodified: '2020-09-02T11:57:46Z'
-    mac: ENC[AES256_GCM,data:Ak5RNDgSjcdxSp9c/i9/6LAiVDmfhpu+3K5ta/itzzBtFL2VKpqd8g8QEtC5TRtyWMMf7rvhODOvDPiy5voWggVsNOCD23FyS2erVTQz9r3thda0sTx8c8Z73R3Dw0Qy5du1bPi9pqMoY0vvSOWhJGzyMCvPsf1duH3osWk965E=,iv:BSTcvq4QieBLUg11YgiUebS1xIqOvTetz8AcBnbXg0s=,tag:KQdge7bu7o68IOns2Vj9kA==,type:str]
+        created_at: '2020-09-02T12:17:13Z'
+        enc: 0Z1M92D19oSEZSnh6YSTUKU2BlCKV1OkTjewYJPXQ2swAn1thaSf6p12fO8_DoL26p9U898Jk7hmZeuX9qJNAMOVDf76RnHB5dTFIfabDrgDceuWM_xfZqc2DmwVcwDgFlq_apql3OHwv1Li7qWsjbnsyIWJq4OpqizV_crN-e00uO8y2k6hYWveZUzVh2jMSwVMFBmm1cp4kZSxD491AS3uhhnmS4V76Hy5t-oeCRp3NIrokUaV40nZBJd4mWmNpGUikStJxIJgC4s1LPv-CwlnulFkFckgKXRP8oYk5xvUd9chQt8sVuwRx-8vYpz8Xflv3jZ8BjrddFuncD-pSA
+    lastmodified: '2020-09-02T12:17:15Z'
+    mac: ENC[AES256_GCM,data:n9eTZv0IYpHYK0PuGc0Tdp/GRTxksZbq4TRklxMgrKErJJIvKR2T+Hgrhcd6TWj2v8EG2vmhw6qK9bDpaxomBZCQv+zjyI2kC4/1p/BRFCobxwrAcjUTSWnkR9QFQZG36doQVNnCjjjLTf7dm7CaT6CAy2JBPBzXJtAaW10C3Gg=,iv:HcD88JgONF5XZAuUim4fcEaNjtHWrk0NYNk46DkkLYw=,tag:VhUv1KGdklF5EcMpqUCJ1g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
