--- a/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
@@ -1,11 +1,10 @@
-apiVersion: ENC[AES256_GCM,data:YKs=,iv:OokXzW8HhmVUu3BLoevoraUUps1agEnx/3rSFZ0FNZE=,tag:k+WaQvmX4WhiPcs8yAK6wg==,type:str]
+apiVersion: ENC[AES256_GCM,data:9wU=,iv:86u1c48w/ci0DV0gQNXCOcnocE1pzuRVjHYfCCtT3wY=,tag:PyhUDNmhUERtLK7Sp7Jycw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:kO+DbVYfAu3Cx2EPFo9pG3HT8hnPuoJVu5AmHJPPMJaW2Nz0cVgJdh3hIC4EiyqBu8epEV+hXXHROEPmpkQO7IcQmYNuXt/82yw7gTpq5ChT51zrOzaSTNfX63sUDuMqylUvDq9z+n16vG1khTVqiKdUDwljN07SwnIMwjcAWjfO6sqV,iv:ZgtM5C5lpnNFB0xCWmZHCam28W4mtE0GmAGI8vanWsM=,tag:qCwhyZcX5h8FyIzBQn0KjQ==,type:str]
-kind: ENC[AES256_GCM,data:ESUP8chb,iv:4XZgWfhP9uRBQvqAy9o3RJMkXQuHnzThFtZWRLQoKKY=,tag:2ibws+6hDye1tXfywXtWfQ==,type:str]
+    values.yaml: ENC[AES256_GCM,data:qFDD2S1UKWrPjuXZ5bgHjBg1tEp73QLVTyB6sbtg3zix9wtxUdxrCDEmGeooMPw5Sfy3wY3NshK5daizJNQKSjta7rhMVhTjvNg61a0GmxVWHUHM/HM98vMhTCwxuoYxD9b0j1kfNl41EPndwyHWHph3mtn1gzGeJY2Bu8C4hS6Y7l59,iv:QBRopnIoDalRT3gTZfX4fOgpnJiQioeEyyIl8MAvvzI=,tag:bVgBaGh+n8p1MkRj3sW7aA==,type:str]
+kind: ENC[AES256_GCM,data:NcQ4YeSr,iv:sH34h8viyKRRyFpUHAasHNLAsx5VKRh6LnpHXVwPFkI=,tag:ZplA5acrU7HhDMCE5BcQeQ==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:idLq52jj4wTNnc9MvaZiwOg=,iv:6DXavD3jPHl2EcXD1DS8QglZGOdtpmyKZ2faQ6M0a/U=,tag:cI79izsxr4eYs8QZMUgNYQ==,type:str]
-    namespace: ENC[AES256_GCM,data:qAlGdO4=,iv:qeIIAJro95ohG72D92ks6lrBQeE1gpeefId6SvIUzw8=,tag:ozzk04KJQTbdAqlIjzDkqw==,type:str]
+    name: ENC[AES256_GCM,data:5BOlSNaETgIa6NKcWoLNp4s=,iv:U8WJwTc8EmE1AzY76bjMTcQCkIFJaeBXQMpvdu+nyN4=,tag:LmyJHBbgScbHIhUGTT4tjw==,type:str]
+    namespace: ENC[AES256_GCM,data:fSQrCHE=,iv:/+q7KwW7liGmPTYc+zeAavFsl3wny3u4i2x+d5fi/Vs=,tag:pX5nHwHe+vDfs+Xf6omAlg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,10 +12,10 @@ sops:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
         version: d1c5c1736ef44f86a71cfe140d3eef49
-        created_at: '2020-09-02T12:12:10Z'
-        enc: gOM0aJ7VJdhCzKOFL8fKrGcB0bYysa8Cfu-EDW9Fnf20H74J1sxgbWVNN-dXXUaIM031LIKAusIXaL5Np2MFo8gGPizeUKUW9x7X-6ngNP0C0YnZkAfOnXIv6RSi8PjoqrQYJ2gxUaITQL4zDrOeaFgYOr_1w7nicJBig_3K1sknwIfYtGKkdZPas3Eg1aiUoTeCP9PKLPucTj20x_yZmnS29A9wndIZAS2BWEn-klSJGcqFB43mC0qqCEh1Iv58u5iISZQx8gptZz1H5aK4Ui04MAcq5G_tJVIAWdEbZbIGsNqlbw4imJdEbTFp81fZnKHZpinZ-DrBH2Cp4Rhjiw
-    lastmodified: '2020-09-02T12:12:12Z'
-    mac: ENC[AES256_GCM,data:V+9WpndMh+2TwvegV36lWhZStb5cimvF2K27H/eujMPdv6T6OmZHIWq2q0FW4gu0Nsa76VArzJC4pzYOUicg2Fm93f/VOSM3GRwx4GaIzcgzCzJKIXCBYlMT+aqubykIhU5Nmpz17/4Xd3ZlauJDi+ZJZFvUGUX2uzP0tv/znJo=,iv:2XO8cHBeXTKO/b+MmddFAVGc47VZR0xWva9fszl/ySE=,tag:0N4dLZ1NDdn0L5aA9P/Uxw==,type:str]
+        created_at: '2020-09-02T12:32:17Z'
+        enc: ZLB21vEZWaPvhg1tyQLpq0AjBj4-Wt0auUh2TtJTcDeOGnWC-rELSrGGB1Tee9EWwAZBUo6zcksiMxsl-IMVmg9ZUt06izUjdDEjaSvxtqeTMbzWbk1ppFCKhTZ1WNqOeTPW1udw5HLHnh5MTaii6NVMXUKOEfE6uXTyB-xl79VeV4InNDwg1yqPtQHbtUA591Po3zEh6uMrXcvMEdrv8HBI8SKTkgHuxpSWISmOJfELsE7zhNIZlQWtL06mAxdL8-E5aqu9twBUgZ-s-Wq7qeK3Xzy-4ZRjCBWQxqgTISMuRDEV-tWrK7L5HwhfRxes7fLXzeL-ULgC9v34tIzL9w
+    lastmodified: '2020-09-02T12:32:18Z'
+    mac: ENC[AES256_GCM,data:hPabxsgkyKefcqW9+ly5zdIoZOvXtiiPEE2VJQx3/P3IY1beV70sTvJkiV6NZbfkwZxQgHzC8IQQVA4fHRKOYbyld73Q617fsPb6yfhZWYUNSfItQnzTReP0XykebrdbtLDOXKsuMv06DzTNlkOQDq3SBhlCvPyfv90iTAIQlyc=,iv:ShmVHANGDih2KPfrWLplmBpOVhqpQ2cMghhhGj0jB1Y=,tag:oRSUXxNIPJNuegEn+26SwQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
