Updating secrets for test cluster

--- a/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
@@ -1,21 +1,21 @@
-apiVersion: ENC[AES256_GCM,data:9wU=,iv:86u1c48w/ci0DV0gQNXCOcnocE1pzuRVjHYfCCtT3wY=,tag:PyhUDNmhUERtLK7Sp7Jycw==,type:str]
+apiVersion: ENC[AES256_GCM,data:Jg4=,iv:fZgURaXd5Dc0ZMNlfL9HdEbHEAVWUpnaJSX9cM7M0hs=,tag:Yx1W6pcDVppFlcYICEqOWQ==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:qFDD2S1UKWrPjuXZ5bgHjBg1tEp73QLVTyB6sbtg3zix9wtxUdxrCDEmGeooMPw5Sfy3wY3NshK5daizJNQKSjta7rhMVhTjvNg61a0GmxVWHUHM/HM98vMhTCwxuoYxD9b0j1kfNl41EPndwyHWHph3mtn1gzGeJY2Bu8C4hS6Y7l59,iv:QBRopnIoDalRT3gTZfX4fOgpnJiQioeEyyIl8MAvvzI=,tag:bVgBaGh+n8p1MkRj3sW7aA==,type:str]
-kind: ENC[AES256_GCM,data:NcQ4YeSr,iv:sH34h8viyKRRyFpUHAasHNLAsx5VKRh6LnpHXVwPFkI=,tag:ZplA5acrU7HhDMCE5BcQeQ==,type:str]
+    values.yaml: ENC[AES256_GCM,data:fgJfkbeS9Eyk2s6Kc/3WrC3KtozWwXtJBhOL2/TNw6nLv/TYcXBLTvqo4mJuxAmmHNvBWdqZTfw76QYVritWigPxOov4nCKNMZz16Qjw2N/PW3w7Z3T34wSDIPEBFD3S5Oc/9HdhrrCGhGgJG6atTkUIidIR64S8XhF3mxXp4+5Oqs0s,iv:62D9j8fVmV5QvIg81cxuXFDRrtVJTPbyCILOz6zGJQ4=,tag:EI/DQP/ec6VAYtQLIWgA3A==,type:str]
+kind: ENC[AES256_GCM,data:dY+xstzM,iv:EwbWuGvINMJLrkJjNzxffcadb4YGxh2RFypCgvsIoeg=,tag:yt+mRB+1/9Exmx6cpMLjdw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:5BOlSNaETgIa6NKcWoLNp4s=,iv:U8WJwTc8EmE1AzY76bjMTcQCkIFJaeBXQMpvdu+nyN4=,tag:LmyJHBbgScbHIhUGTT4tjw==,type:str]
-    namespace: ENC[AES256_GCM,data:fSQrCHE=,iv:/+q7KwW7liGmPTYc+zeAavFsl3wny3u4i2x+d5fi/Vs=,tag:pX5nHwHe+vDfs+Xf6omAlg==,type:str]
+    name: ENC[AES256_GCM,data:GikKBDB8mo3ADLggWa0sHUw=,iv:76wXW13w9iah+1Zcz0DFp9p35uq+z52BP9qO24tLJNM=,tag:wG3ROZCgAqMBU/bK1LrBJw==,type:str]
+    namespace: ENC[AES256_GCM,data:68s/ZAM=,iv:P0kSyEhcvs7N/x+XDDgOIdU/HmDJoJ9avVHmySIc+nY=,tag:VSyER/eBNZ330VwoGeOP4g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
-        version: d1c5c1736ef44f86a71cfe140d3eef49
-        created_at: '2020-09-02T12:32:17Z'
-        enc: ZLB21vEZWaPvhg1tyQLpq0AjBj4-Wt0auUh2TtJTcDeOGnWC-rELSrGGB1Tee9EWwAZBUo6zcksiMxsl-IMVmg9ZUt06izUjdDEjaSvxtqeTMbzWbk1ppFCKhTZ1WNqOeTPW1udw5HLHnh5MTaii6NVMXUKOEfE6uXTyB-xl79VeV4InNDwg1yqPtQHbtUA591Po3zEh6uMrXcvMEdrv8HBI8SKTkgHuxpSWISmOJfELsE7zhNIZlQWtL06mAxdL8-E5aqu9twBUgZ-s-Wq7qeK3Xzy-4ZRjCBWQxqgTISMuRDEV-tWrK7L5HwhfRxes7fLXzeL-ULgC9v34tIzL9w
-    lastmodified: '2020-09-02T12:32:18Z'
-    mac: ENC[AES256_GCM,data:hPabxsgkyKefcqW9+ly5zdIoZOvXtiiPEE2VJQx3/P3IY1beV70sTvJkiV6NZbfkwZxQgHzC8IQQVA4fHRKOYbyld73Q617fsPb6yfhZWYUNSfItQnzTReP0XykebrdbtLDOXKsuMv06DzTNlkOQDq3SBhlCvPyfv90iTAIQlyc=,iv:ShmVHANGDih2KPfrWLplmBpOVhqpQ2cMghhhGj0jB1Y=,tag:oRSUXxNIPJNuegEn+26SwQ==,type:str]
+        version: d6517bf87c76473b8fbc7e6f4c6e0c4a
+        created_at: '2020-09-02T16:36:51Z'
+        enc: enNNW8pCNSXkAcfgXobm8SWor4wp9nItRtTUouyIet4oGuPVw32JuyhZEGMNG9goaRTKj_XSuXNEsBiRFZxJ_n6u_Ani7xuyzhN-SojLzq5LACG0ROfPhJM1RkYy0I7l7zx6Q-EEjWDfrAPU6BCDHHRIJi9pnMhng4CnGRkq5YAKS1t0tIEUh1XdUmh4CJm6JwUs4SlRDxeSXrZo8bnxNNxqjtt-fBqzbhKxeiM5cTXVLCYb8jS-EBTGIuCm80KEOoiRfWDQkz2h0uqkOpDFD9ubx8B1P26JdQ4pUenmnOGFdg0cWufyLtQLoWHsgXkfk_6gCt8XkrsPLgp5T7QFXA
+    lastmodified: '2020-09-02T16:36:54Z'
+    mac: ENC[AES256_GCM,data:F7pWD4sOlVYPr1zAH/kBhejQ2Bk0u3OR8Vq6PdhCMt0ZRCzN+wLyQPHMt76Q+E7qRh7Lk6TaAkw31NvXOch0GaAkFQHaaE+gCl1+xAnpwOQFCqGTnr3ZVc7hkkcA8Q1SPdl2HAzwErh6hCMDhwhv+EoNx0yfICOhDY+KsR5Ac5U=,iv:Q0T2uwlJePFvqf6YCecneX33f5Px3iPlQLR+rYWGXZ4=,tag:7SumbbRJSlTc2V3f5Az9+w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
