--- a/k8s/environments/test/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,22 @@
-apiVersion: ENC[AES256_GCM,data:nGc=,iv:fyIL5+TAsJjM4sPjcAbRkynyzcm6Fcg2Kgujg+I9w40=,tag:95z2IOH6CNtDITuTddG3Zg==,type:str]
+kind: ENC[AES256_GCM,data:/IpSriZx,iv:PrGoa4qcK7DTAuauCfXr2Hl/qox1UQYEHpsfswOcQxI=,tag:R59OcCUEHCyjcQgSTIvTSg==,type:str]
+apiVersion: ENC[AES256_GCM,data:5aM=,iv:zx+pGTJOH2i6pcBSKps0AVMMhpEaBig64ek/zXNGwTM=,tag:0JtdXkIH97ff6i02rzGLpw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:T8mg/oAVgoce3smMod8Kf/WbikvWDRhi3DtONqLJkKKlDQFLP6gBuS+ShBNywDjyPXzrhUIMAdOCD5jH3lBJeny+XzEYW78KIwIM4bwbziXKqFc3nAf+9lPfOXv/zjhQZd/0UR4hyWUDf/GILHEIr/AbSLDAKehIDBRA+ooaNabSvNslfvtj/tswrwg=,iv:zOF4xvuQpmhJellQRV+nHuhm6j/qqkbX/elQ4dxpxFg=,tag:TuHS0xsfxUPtiond434oRQ==,type:str]
-kind: ENC[AES256_GCM,data:PCKWlvl4,iv:2cAdMwQVK/MHWIqcIjvgMuxZL2Bi2KnumEn37bKT2UE=,tag:oOUBC4n7c+xu6xAOKHgomg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:R0NXXRQ35PIH2DUckDJ5TVh2a0xo0VR16iJ0duqkVC908BneJFQP/nNk28Wo9Msz2cUV4w56UTJtTULYeT7A+pmAf1CdX/67qG/4G5KiNoQ6BOkZiiUtockiqx7cWdcNZFRFTkioeFmnakm3f1dna1gBTkL8AAtEHEMuJ0IWI5RSA95tto9Ko57/1W0=,iv:fzDkCRL46nFI5sgH2vNebBpyO+tDZRLB/gMoe4DVkIc=,tag:H8zyOMMpyLIIdnncsEpIvQ==,type:str]
+type: ENC[AES256_GCM,data:OCWqKt+U,iv:qrbmn3mHIomrq1/VjICjC4TiViFgI0zA745YQ6FH1nM=,tag:FVpRR3jptCDj6YE5iduqEw==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:akPkRuwB4zhgTIrs,iv:31PTXQK39ZZQUxafXCBSCtHCuV5dB+zF5CBmNWqculg=,tag:d/itnko86cD4vHFHPaM3wA==,type:str]
-    namespace: ENC[AES256_GCM,data:EPKuZVQ=,iv:1LWzXRqVtpYOETThw7PJowUE9BLSJ1Y2JSmSoWL/sDE=,tag:kg68zO/aCZFfdBxS/yB2mg==,type:str]
+    name: ENC[AES256_GCM,data:T41RUUpZ43b6N4IQ,iv:Vy7A1Nr0nGz2DM3poC1+mGw84MqH7xEbKoMqpYKgnZ8=,tag:IrhVIa4dEs7UgCuSxxr9Hw==,type:str]
+    namespace: ENC[AES256_GCM,data:jLJidyA=,iv:xKDldmZ1dmeEz9BsV9/kBBn/e6TmXO+0KoWU+OGRCyw=,tag:yOPJGA3InfgJtVct6XpqHA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
-        version: d1c5c1736ef44f86a71cfe140d3eef49
-        created_at: '2020-09-02T12:17:13Z'
-        enc: 0Z1M92D19oSEZSnh6YSTUKU2BlCKV1OkTjewYJPXQ2swAn1thaSf6p12fO8_DoL26p9U898Jk7hmZeuX9qJNAMOVDf76RnHB5dTFIfabDrgDceuWM_xfZqc2DmwVcwDgFlq_apql3OHwv1Li7qWsjbnsyIWJq4OpqizV_crN-e00uO8y2k6hYWveZUzVh2jMSwVMFBmm1cp4kZSxD491AS3uhhnmS4V76Hy5t-oeCRp3NIrokUaV40nZBJd4mWmNpGUikStJxIJgC4s1LPv-CwlnulFkFckgKXRP8oYk5xvUd9chQt8sVuwRx-8vYpz8Xflv3jZ8BjrddFuncD-pSA
-    lastmodified: '2020-09-02T12:17:15Z'
-    mac: ENC[AES256_GCM,data:n9eTZv0IYpHYK0PuGc0Tdp/GRTxksZbq4TRklxMgrKErJJIvKR2T+Hgrhcd6TWj2v8EG2vmhw6qK9bDpaxomBZCQv+zjyI2kC4/1p/BRFCobxwrAcjUTSWnkR9QFQZG36doQVNnCjjjLTf7dm7CaT6CAy2JBPBzXJtAaW10C3Gg=,iv:HcD88JgONF5XZAuUim4fcEaNjtHWrk0NYNk46DkkLYw=,tag:VhUv1KGdklF5EcMpqUCJ1g==,type:str]
+        version: d6517bf87c76473b8fbc7e6f4c6e0c4a
+        created_at: '2020-09-02T16:39:38Z'
+        enc: FW0bEDLxRD-a8H8xIb6Ss1XAachhQSXDj53xuKc1FD-tkz0pujqsjcqQcJE8G5gsygR0OSJvUiSa0wcNj07DDVow9Ywkz9Z7bjglkPL5XvYSTl-yKr5m-JK1uAP-p5iw2cwAVuqurMG0qOu1Iwq4GGhjH337cfytfNWRPsoGviWzkYmWUmsWoWKuq98QX1bjrT0UO1GAAtoq4Ea_DaLCBfvcOCQ-wbtmVuXvXRJtKdhwLFmj4PSg7pm-TaiWWa0_ijgUnmvR77b7JCOLeVrXWeSIAWC4Z95hO0bVeYPHTPwd8gUqQit8NIWp7bw5Fhe8hyhQZ3gweG71JaAT4rXSzg
+    lastmodified: '2020-09-02T16:39:40Z'
+    mac: ENC[AES256_GCM,data:J54yXAJCLm9i7HZz32g65zVpBm+K7S5oejQa2WTUhNWLYquTuiIt0erf+G5W63SrIPd3WgzgITrdNbq90h/Ol5m/kKcWadI9qjJaH7y8tYst8yE+hsFnkwScWDdrzwvQ5AS39r7ko0xBk08R4oLurhWR4dEFVyo2B6GOi/upeHo=,iv:akvsloKouDnG5eT8nUI/Ln8ru5mxqwX7fEC50tZNy40=,tag:+jK9blvzzQtDVbvozHYYMQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
