--- a/k8s/release/docmosis/templates/deployment.yaml
+++ b/k8s/release/docmosis/templates/deployment.yaml
@@ -25,6 +25,9 @@ spec:
         hostnames:
         - {{ .Values.hostaliases.hostname | quote }}
       {{- end }}
+      securityContext:
+        runAsUser: 1000
+        fsGroup: 1000
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image }}"
@@ -32,7 +35,7 @@ spec:
           volumeMounts:
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
         {{- if eq .Values.livenessProbe.enabled true }}
           livenessProbe:
