--- a/k8s/release/docmosis/templates/service.yaml
+++ b/k8s/release/docmosis/templates/service.yaml
@@ -15,7 +15,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 8080
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
       name: http
   selector:
