--- a/k8s/environments/sbox/common/mi/mi-integration-service.yaml
+++ b/k8s/environments/sbox/common/mi/mi-integration-service.yaml
@@ -11,7 +11,7 @@ spec:
   releaseName: mi-integration-service
   chart:
     git: git@github.com:hmcts/shared-services-flux
-    path: k8s/charts/mi/mi-integration-service
+    path: k8s/release/mi/mi-integration-service
     ref: master
   values:
     job:
@@ -26,7 +26,7 @@ spec:
         "mi-vault":
           excludeEnvironmentSuffix: false
           resourceGroup: mi-{{ .Values.global.environment }}-rg
-          usepodidentity: false
+          usepodidentity: true
           secrets:
           - notify-api-key-cmc
           - notify-api-key-divorce
@@ -38,8 +38,11 @@ spec:
         DATA_SOURCE_NOTIFY: true
         GOV_UK_NOTIFY_ENABLED_CMC: true
         GOV_UK_NOTIFY_ENABLED_DIVORCE: true
+        DATA_SOURCE_EIGHTBYEIGHT: true
         MI_CLIENT_ID: c5de2886-5b81-4867-8e16-1af09f01bc5f
     global:
       subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: "sbox"
+      usepodidentity: true
+
