Fixed requirements job pathing for mi release charts

--- a/k8s/release/mi/mi-staging-service/requirements.yaml
+++ b/k8s/release/mi/mi-staging-service/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
    - name: job
      version: ~0.5.2
-     repository: 'file://../../common/job'
+     repository: 'file://../common/job'
