--- a/k8s/release/mi/mi-extraction-service/requirements.yaml
+++ b/k8s/release/mi/mi-extraction-service/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
    - name: job
      version: ~0.5.5
-     repository: 'file://../../common/job'
+     repository: 'file://../common/job'
