adding missing permission for MI

--- a/k8s/environments/test/common/mi/mi-integration-rbac.yaml
+++ b/k8s/environments/test/common/mi/mi-integration-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   name: mi-developer
 rules:
 - apiGroups: [""]
-  resources: ["pods", "pods/log", "pods/portforward", "pods/attach", "pods/exec", "jobs"]
+  resources: ["pods", "pods/log", "pods/portforward", "pods/attach", "pods/exec", "jobs", "batch"]
   verbs: ["get", "list", "create", "watch", "delete"]
 ---
 kind: RoleBinding
