adding helm release access

--- a/k8s/environments/test/common/mi/mi-integration-rbac.yaml
+++ b/k8s/environments/test/common/mi/mi-integration-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: mi
   name: mi-developer
 rules:
-- apiGroups: ["", "extensions", "apps", "batch"]
+- apiGroups: ["", "extensions", "apps", "batch", "helm.fluxcd.io"]
   resources: ["*"]
   verbs: ["*"]
 ---
