--- a/k8s/release/mi/mi-staging-service/Chart.yaml
+++ b/k8s/release/mi/mi-staging-service/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 name: mi-staging-service
 home: https://github.com/hmcts/mi-staging-service
-version: 0.0.2
+version: 0.0.3
+appVersion: "1.0.0"
 description: MI staging service
 maintainers:
   - name: HMCTS MI platform
