--- a/k8s/release/mi/mi-integration-service/Chart.yaml
+++ b/k8s/release/mi/mi-integration-service/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 name: mi-integration-service
 home: https://github.com/hmcts/mi-integration-service
-version: 0.0.9
+version: 0.0.10
+appVersion: "1.0.0"
 description: MI integration service
 maintainers:
   - name: HMCTS MI platform
