--- a/k8s/environments/test/common/mi/mi-data-extractor.yaml
+++ b/k8s/environments/test/common/mi/mi-data-extractor.yaml
@@ -41,3 +41,4 @@ spec:
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: "test"
       ccd_environment: "aat"
+      usepodidentity: true
