--- a/k8s/release/mi/mi-data-extractor-job/Chart.yaml
+++ b/k8s/release/mi/mi-data-extractor-job/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v2
+apiVersion: v1
 name: mi-data-extractor-job
 home: https://github.com/hmcts/data-extractor
-version: 0.0.9
+version: 0.0.10
+appVersion: "1.0.0"
 description: MI data extractor
 maintainers:
   - name: HMCTS MI platform
