--- a/k8s/environments/test/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/test/common/mi/mi-extraction-service.yaml
@@ -31,6 +31,10 @@ spec:
           resourceGroup: mi-{{ .Values.global.environment }}-rg
           secrets:
           - appinsights-instrumentationkey
+          - gov-uk-notify-api-key
+          - mailing-targets
+          - sftp-remote-user
+          - sftp-remote-password
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
         MI_CLIENT_ID: "58ed3fc0-18be-4a6f-8ceb-14768c8e796a"
@@ -48,6 +52,10 @@ spec:
             resourceGroup: mi-{{ .Values.global.environment }}-rg
             secrets:
             - appinsights-instrumentationkey
+            - gov-uk-notify-api-key
+            - mailing-targets
+            - sftp-remote-user
+            - sftp-remote-password
         environment:
           APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
           MI_CLIENT_ID: "58ed3fc0-18be-4a6f-8ceb-14768c8e796a"
