Disable suspension of extraction and house keeping jobs

--- a/k8s/prod/releases/mi/mi-extraction-service.yaml
+++ b/k8s/prod/releases/mi/mi-extraction-service.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     job:
       image: ssprivateprod.azurecr.io/mi-extraction-service:prod-f8f9033
-      suspend: true
+      suspend: false
       kind: CronJob
       schedule: '40 1 * * *'
       activeDeadlineSeconds: 82800 #23 hours
