--- a/k8s/release/docmosis/templates/deployment.yaml
+++ b/k8s/release/docmosis/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app.kubernetes.io/name: {{ include "docmosis.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        aadpodidbinding: {{ .Values.aadIdentityName }}
     spec:
       {{- if .Values.hostaliases }}
       hostAliases:
@@ -60,17 +61,17 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
-            - name: DOCMOSISADMINTOKEN
+            - name: DOCMOSIS_ACCESSKEY
               valueFrom:
                 secretKeyRef:
                   name: docmosis
                   key: docmosisAPIToken
-            - name: DOCMOSISAPITOKEN
+            - name: DOCMOSIS_ADMINPW
               valueFrom:
                 secretKeyRef:
                   name: docmosis
                   key: docmosisAdminToken
-            - name: DOCMOSISLICENSEKEY
+            - name: DOCMOSIS_KEY
               valueFrom:
                 secretKeyRef:
                   name: docmosis
