Updated v2 charts to get dependency properly

--- a/k8s/release/mi/v2/mi-extraction-service/Chart.yaml
+++ b/k8s/release/mi/v2/mi-extraction-service/Chart.yaml
@@ -10,4 +10,4 @@ maintainers:
 dependencies:
    - name: job
      version: ~0.5.7
-     repository: 'file://../common/job'
+     repository: 'file://../../common/job'
