--- a/k8s/release/mi/mi-extraction-service/Chart.yaml
+++ b/k8s/release/mi/mi-extraction-service/Chart.yaml
@@ -1,8 +1,13 @@
-apiVersion: v1
+apiVersion: v2
 name: mi-extraction-service
 home: https://github.com/hmcts/mi-extraction-service
-version: 0.0.7
+version: 0.0.8
 appVersion: "1.0.0"
+type: application
 description: MI extraction service
 maintainers:
   - name: HMCTS MI platform
+dependencies:
+   - name: job
+     version: ~0.5.7
+     repository: 'file://../common/job'
