--- a/k8s/release/mi/mi-integration-service/Chart.yaml
+++ b/k8s/release/mi/mi-integration-service/Chart.yaml
@@ -1,8 +1,13 @@
-apiVersion: v1
+apiVersion: v2
 name: mi-integration-service
 home: https://github.com/hmcts/mi-integration-service
-version: 0.0.10
+version: 0.0.11
 appVersion: "1.0.0"
+type: application
 description: MI integration service
 maintainers:
   - name: HMCTS MI platform
+dependencies:
+   - name: job
+     version: ~0.5.7
+     repository: 'file://../common/job'
