added pact-broker config

--- a/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-wiremock.yaml
@@ -27,7 +27,7 @@ spec:
         - /
       tls: []
       hosts:
-      - 'hmi.ss-service.core-compute-sandbox.internal'
+      - 'hmi-wiremock.ss-service.core-compute-sandbox.internal'
     readinessProbe:
       enabled: false
     #   path: "/"
