--- a/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: hmi-pact-broker
+  name: hmi-pactbroker
   namespace: hmi
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: glob:v*
 spec:
-  releaseName: hmi-pact-broker
+  releaseName: hmi-pactbroker
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/hmi/hmi-pact
@@ -28,27 +28,33 @@ spec:
       tls: []
       hosts:
       - 'hmi-pact.ss-service.core-compute-sandbox.internal'
+    postgresql:
+      enabled: true
+      postgresqlServerName: "hmi-pactbroker-sbox"
+      postgresqlHost: "hmi-pactbroker-sbox.postgres.database.azure.com"
+      postgresqlDatabase: "hmi-pactbroker"
+      postgresqlPort: "5432"
+      postgresqlDisableSsl: "true"
+    keyvaults:
+    - name: mi-sharedinfra-kv-sbox
+      resourcegroup: hmi-sharedinfra-sbox-rg
+      subscriptionid: a8140a9e-f1b0-481f-a4de-09e2ee23f7ab
+      tenantid: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
+      secretref: kvcreds
+      secrets:
+      - pact-db-user
+      - pact-db-password
     readinessProbe:
       enabled: false
-    #   path: "/"
+    #   path: "/diagnostic/status/heartbeat"
     #   initialDelaySeconds: 60
-    #   periodSeconds: 30
+    #   periodSeconds: 10
     #   failureThreshold: 6
     #   timeoutSeconds: 5
     livenessProbe:
       enabled: false
-    #   path: "/"
+    #   path: "/diagnostic/status/heartbeat"
     #   initialDelaySeconds: 60
-    #   periodSeconds: 30
+    #   periodSeconds: 10
     #   failureThreshold: 6
     #   timeoutSeconds: 5
-    env:
-      PACT_BROKER_DATABASE_USERNAME: postgres
-      PACT_BROKER_DATABASE_PASSWORD: password
-      PACT_BROKER_DATABASE_HOST: postgres
-      PACT_BROKER_DATABASE_NAME: postgres
-      PACT_BROKER_DATABASE_PORT: 5432
-      PACT_BROKER_DISABLE_SSL_VERIFICATION: true
-      PACT_BROKER_WEBHOOK_SCHEME_WHITELIST: http
-      PACT_BROKER_PUBLIC_HEARTBEAT: true
-      PACT_BROKER_LOG_LEVEL: INFO
