--- a/k8s/release/hmi/hmi-pactbroker/templates/service.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: {{ .Chart.Name }}
   labels:
-    app.kubernetes.io/name: {{ include "hmi-pact-broker.name" . }}
-    app: {{ include "hmi-pact-broker.name" . }}
-    helm.sh/chart: {{ include "hmi-pact-broker.chart" . }}
+    app.kubernetes.io/name: {{ include "hmi-pactbroker.name" . }}
+    app: {{ include "hmi-pactbroker.name" . }}
+    helm.sh/chart: {{ include "hmi-pactbroker.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
@@ -22,5 +22,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "hmi-pact-broker.name" . }}
+    app.kubernetes.io/name: {{ include "hmi-pactbroker.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
