--- a/k8s/release/hmi/hmi-pactbroker/templates/test/test-connection.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/test/test-connection.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "hmi-pact-broker.fullname" . }}-test-connection"
+  name: "{{ include "hmi-pactbroker.fullname" . }}-test-connection"
   labels:
-    app.kubernetes.io/name: {{ include "hmi-pact-broker.name" . }}
-    helm.sh/chart: {{ include "hmi-pact-broker.chart" . }}
+    app.kubernetes.io/name: {{ include "hmi-pactbroker.name" . }}
+    helm.sh/chart: {{ include "hmi-pactbroker.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
@@ -14,5 +14,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "hmi-pact-broker.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "hmi-pactbroker.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
