--- a/k8s/release/hmi/hmi-pactbroker/values.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/values.yaml
@@ -12,45 +12,15 @@ service:
   type: ClusterIP
   port: 80
 
-ingress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: traefik
-  paths:
-    - /
-  tls: []
-  hosts:
-  - 'hmi-pact.ss-service.core-compute-sandbox.internal'
-postgresql:
-  enabled: true
-  postgresqlServerName: "hmi-pactbroker-sbox"
-  postgresqlHost: "hmi-pactbroker-sbox.postgres.database.azure.com"
-  postgresqlDatabase: "hmi-pactbroker"
-  postgresqlPort: "5432"
-  postgresqlDisableSsl: "true"
-keyvaults:
-- name: hmi-sharedinfra-kv-sbox
-  resourcegroup: hmi-sharedinfra-sbox-rg
-  subscriptionid: a8140a9e-f1b0-481f-a4de-09e2ee23f7ab
-  tenantid: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
-  secretref: kvcreds
-  secrets:
-  - pact-db-user
-  - pact-db-password
-readinessProbe:
-  enabled: false
-#   path: "/diagnostic/status/heartbeat"
-#   initialDelaySeconds: 60
-#   periodSeconds: 10
-#   failureThreshold: 6
-#   timeoutSeconds: 5
-livenessProbe:
-  enabled: false
-#   path: "/diagnostic/status/heartbeat"
-#   initialDelaySeconds: 60
-#   periodSeconds: 10
-#   failureThreshold: 6
-#   timeoutSeconds: 5
+# ingress:
+#   enabled: true
+#   annotations:
+#     kubernetes.io/ingress.class: traefik
+#   paths:
+#     - /
+#   tls: []
+#   hosts:
+#   - 'hmi-pact.ss-service.core-compute-sandbox.internal'
 
 env: {}
 
