--- a/k8s/release/hmi/hmi-pactbroker/values.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/values.yaml
@@ -15,7 +15,7 @@ service:
 # ingress:
 #   enabled: true
 #   annotations:
-#     kubernetes.io/ingress.class: traefik
+#     kubernetes.io/ingress.class: traefik-sbox
 #   paths:
 #     - /
 #   tls: []
